# rt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  base.h  build.bat  math.h  rt.cpp  rt.h  rtinoneweekend.cpp  temp_build.bat
CMake/: CompileHLSL.cmake
src/: algo.h  base.cpp  base.h  base_types.cpp  base_types.h  bsdf.h  bvh.cpp  bvh.h  containers.h  debug.cpp  debug.h  hash.h  integrate.cpp  integrate.h  jobsystem.cpp  jobsystem.h  lights.cpp  lights.h  low_discrepancy.h  math.cpp  math.h  memory.cpp  memory.h  parallel.h  primes.h  primitive.h  random.h  rgb2spec.cpp  rt.cpp  rt.h  sampler.h  sampling.h  scene.cpp  scene.h  spectrum.cpp  spectrum.h  string.cpp  string.h  surface_interaction.h  template.h  (+4 more)
src/bvh/: bvh_aos.h  bvh_build.h  bvh_sah.h  bvh_soa.h  bvh_types.h  job_test.h  parallel.h  partial_rebraiding.h  partition.h
src/geometry/: bspline.h
src/math/: basemath.h  bounds.h  lane4f32.h  lane4u32.h  lane8f32.h  lane8u32.h  math.h  matx.h  simd_base.h  simd_include.h  vec2.h  vec3.h  vec4.h
src/rt/: algo.h  atomics.h  base.cpp  base.h  base_types.cpp  base_types.h  bit_packing.cpp  bit_packing.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  bxdf.h  bxdf_simd.h  camera.h  color.h  containers.h  covariance.h  cpu_scene.cpp  cpu_scene.h  debug.cpp  debug.h  dgfs.cpp  dgfs.h  gpu_scene.cpp  gpu_scene.h  gpu_scene_shaderinterop.h  handles.h  hash.h  image.cpp  image.h  integrate.cpp  integrate.h  jobsystem.cpp  jobsystem.h  lights.cpp  lights.h  low_discrepancy.cpp  low_discrepancy.h  macros.h  (+44 more)
src/rt/bvh/: bvh_aos.h  bvh_build.h  bvh_intersect1.h  bvh_types.cpp  bvh_types.h  create_clusters.h  parallel.h  partial_rebraiding.h
src/rt/cmd/: compile.cpp  convert.cpp  generate_uvs.cpp  shader_compiler.cpp  shader_compiler.h  tile_textures.cpp
src/rt/geometry/: bspline.h
src/rt/gpu/: CMakeLists.txt  device.h  helper_math.h  path_guiding.cpp  path_guiding.h  path_guiding_util.h  platform.h  test.cu
src/rt/graphics/: block_compressor.cpp  block_compressor.h  ptex.cpp  ptex.h  ptex_test.cpp  render_graph.cpp  render_graph.h  streamline.h  vulkan.cpp  vulkan.h
src/rt/math/: basemath.h  bounds.h  dual.h  eigen.h  lane4f32.h  lane4u32.h  lane8f32.h  lane8u32.h  math.h  math_include.h  matx.h  ray.h  simd_base.h  simd_include.h  sphere.h  spherical_harmonics.h  transpose.h  vec2.h  vec3.h  vec4.h
src/rt/photon_mapping/: photon_mapping.cpp  photon_mapping.h
src/rt/scene/: scene.cpp  scene.h
src/rt/shader_interop/: as_shaderinterop.h  bit_twiddling_shaderinterop.h  debug_shaderinterop.h  dense_geometry_shaderinterop.h  gpu_scene_shaderinterop.h  hierarchy_traversal_shaderinterop.h  hit_shaderinterop.h  hlsl_cpp_compat.h  kd_tree_shaderinterop.h  miss_shaderinterop.h  path_guiding_shaderinterop.h  radix_sort_shaderinterop.h  ray_shaderinterop.h  sort_shaderinterop.h  virtual_textures_shaderinterop.h  wavefront_shaderinterop.h
src/rt/shaders/: render_raytrace_rgen.hlsl  shaders.h
src/rt/tables/: primes.hpp  sobolmatrices.h  sobolmatrices.hpp
src/rt/tests/: bvh_test.cpp  test.cpp  test.h
src/rt/util/: atomic.h
src/rt/virtual_geometry/: mesh_simplification.cpp  mesh_simplification.h  virtual_geometry_manager.cpp  virtual_geometry_manager.h  virtual_geometry_streamer.cpp
src/shaders/: accumulate_frames.hlsl  bit_twiddling.hlsli  bxdf.hlsli  calculate_motion_vectors.hlsl  common.hlsli  copy_denoised_output.hlsl  decode_dgf_clusters.hlsl  decode_dgf_clusters.hlsli  dense_geometry.hlsli  dgf_intersect.hlsli  fill_cluster_bottom_level_info.hlsl  fill_instance_descs.hlsl  globals.h  hit.hlsli  intersect_ray_aabb.hlsli  lights_temp.hlsli  nvapi.hlsli  payload.hlsli  ray_triangle_intersection.hlsli  render_raytrace.hlsl  render_raytrace_dgf_intersect.hlsl  render_raytrace_dielectric_hit.hlsl  render_raytrace_diffuse_hit.hlsl  render_raytrace_hit.hlsl  render_raytrace_miss.hlsl  render_raytrace_rgen.hlsl  rt.hlsli  sampling.hlsli  ser.hlsli  voxel.hlsli  wave_intrinsics.hlsli
src/shaders/bsdf/: bsdf.hlsli  bxdf.hlsli  disney_bsdf.hlsli
src/shaders/clas/: allocate_instances.hlsl  assign_instances.hlsl  build_instance_tlas.hlsl  clas_defrag.hlsl  cluster_fixup.hlsl  compact_freelist.hlsl  compute_blas_addresses.hlsl  compute_clas_addresses.hlsl  cull.hlsli  decode_clusters_no_clas.hlsl  decode_dgf_clusters.hlsl  decode_merged_instances.hlsl  decode_voxel_aabbs.hlsl  fill_blas_address_array.hlsl  fill_cluster_bottom_level_info.hlsl  fill_cluster_triangle_info.hlsl  fill_finest_cluster_bottom_level_info.hlsl  fill_instance_descs.hlsl  free_instances.hlsl  get_blas_address_offset.hlsl  hierarchy_traversal.hlsl  initialize_instance_freelist.hlsl  instance_culling.hlsl  instance_streaming.hlsl  lod_error_test.hlsli  merged_instances_test.hlsl  mesh.hlsl  prepare_indirect.hlsl  ptlas_update_partitions.hlsl  ptlas_update_unused_instances.hlsl  ptlas_write_command_infos.hlsl  ptlas_write_instances.hlsl  ptlas_write_instances.hlsli  ray_visibility_test.hlsl  reproject_depth.hlsl  task.hlsl  test.hlsl  write_clas_addresses.hlsl  write_clas_defrag_addresses.hlsl
src/shaders/cluster/: rayquery.hlsli
src/shaders/compress/: bcn_common_api.h  block_compress.hlsl
src/shaders/kd_tree/: calculate_bounds.hlsl  create_sort_keys.hlsl  finalize_calculate_bounds.hlsl  initialize_indices.hlsl  kd_tree_prepare_indirect.hlsl  update_tags.hlsl
src/shaders/lights/: envmap.hlsli  light.hlsli
src/shaders/nvidia/: clas.hlsli  ser.hlsli
src/shaders/path_guiding/: allocate_samples.hlsl  gather_sample_statistics.hlsl  initialize_vmms.hlsl  map.hlsl  path_guiding.hlsli  prefix_sum.hlsl  split_vmm_component.hlsl  splitting.hlsl  temp.hlsli  wem.hlsl
src/shaders/photon_mapping/: build_kd_tree.hlsl  generate_random_points.hlsl  photons.hlsl
src/shaders/ptex/: filter.hlsl  filter.hlsli
src/shaders/restir/: resampling.hlsli
src/shaders/sort/: LICENSE  downsweep.hlsl  radix_sort.hlsl  radix_sort_histogram.hlsl  spine.hlsl  upsweep.hlsl
src/shaders/tex/: filter.hlsli  (+7 more)
src/tables/: primes.h  sobolmatrices.h
src/tests/: sampling_test.cpp  test.cpp  triangleclip_test.cpp
(+18 files in other folders)
